1.7
 * Bug Fixes:
   * Trying to save an empty tag deletes it. (#813)
   * The semi-public API removal mentioned in 1.6's API-NOTES happened.

 * New Features:
   * FLAC cuesheet and seektable support. (#791, Nuutti Kotivuori)
   * Kwargs can be passed to ID3 constructors. (#824, Lukáš Lalinský)
   * mutagen.musepack: Read/tag Musepack files. (#825, Lukáš Lalinský)

 * Tools:
   * mutagen-inspect responds immediately to keyboard interrupts.

1.6 - 2006.08.09
 * Bug Fixes:
   * IOError rather than NameError is raised when File succeeds in
     typefinding but fails in stream parsing.
   * errors= kwarg is correctly interpreted for FLAC tags now.
   * Handle struct.pack API change in Python 2.5b2. (SF #1530559)
   * Metadata 'load' methods always reset in-memory tags.
   * Metadata 'delete' methods always clear in-memory tags.

 * New Features:
   * Vorbis comment vendor strings include the Mutagen version.
   * mutagen.id3: Read ASPI, ETCO, SYTC, MLLT, EQU2, and LINK frames.
   * mutagen.m4a: Read/tag MPEG-4 AAC audio files with iTunes tags. (#681)
   * mutagen.oggspeex: Read/tag Ogg Speex files.
   * mutagen.trueaudio: Read/tag True Audio files.
   * mutagen.wavpack: Read/tag WavPack files.

 * Tools:
   * mid3v2: --delete-frames. (#635)

1.5.1 - 2006.06.26
 * Bug Fixes:
   * Handle ENODEV from mmap (e.g. on fuse+sshfs).
   * Reduce test rerun time.

1.5 - 2006.06.20
 * Bug Fixes:
   * APEv2
      * Invalid Lyrics3v2 tags are ignored/overwritten.
      * Binary values are autodetected as documented.
   * OggVorbis, OggFLAC:
      * Write when the setup packet spans multiple pages.
      * Zero granule position for header packets.

 * New Features:
   * mutagen.oggtheora: Read/tag Ogg Theora files.
   * Test Ogg formats with ogginfo, if present.

1.4 - 2006.06.03
 * Bug Fixes:
   * EasyID3: Fix tag["key"] = "string" handler. (#693)
   * APEv2:
     * Skip Lyrics3v2 tags. (Miguel Angel Alvarez)
     * Avoid infinite loop on malformed tags at the start of the file.